correction: selection dans un dataframe